--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@ _site/
 .DS_Store
 .jekyll-assets-cache
 .sass-cache
+
+_sass/bulma/.editorconfig
+_sass/bulma/.travis.yml
+_sass/bulma/bower.json
+_sass/bulma/CHANGELOG.md
+_sass/bulma/bulma-rtl.sass
+_sass/bulma/package.json
+_sass/bulma/package-lock.json
+_sass/bulma/yarn.lock
+_sass/bulma/BACKERS.md
+_sass/bulma/favicon.ico
+_sass/bulma/test
+_sass/bulma/.github
+_sass/bulma/css
+_sass/bulma/docs
