Migrate cherry.rdil.rocks to rdil.rocks/cherry
Signed-off-by: Reece Dunham <me@rdil.rocks>

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ exclude:
   - .gitignore
   - .sass-cache
   - .cirrus.yml
+  - cherry
 plugins:
   - jekyll-sass-converter
   - jekyll-relative-links
