--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,24 @@
 version: 2
 updates:
-- package-ecosystem: bundler
-  directory: "/"
-  schedule:
-    interval: daily
-    time: '11:00'
-    timezone: EST
-  open-pull-requests-limit: 99
-  assignees:
-  - RDIL
-  versioning-strategy: increase
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
+  - package-ecosystem: bundler
+    directory: "/"
+    schedule:
+      interval: daily
+      time: '11:00'
+      timezone: EST
+    open-pull-requests-limit: 99
+    assignees:
+      - RDIL
+    versioning-strategy: increase
+    allow:
+      - dependency-type: direct
+      - dependency-type: indirect
+  - package-ecosystem: npm
+    directory: "/cherry/"
+    schedule:
+      interval: daily
+      time: '11:00'
+      timezone: EST
+    open-pull-requests-limit: 10
+    assignees:
+      - RDIL
