--- a/cherry/package.json
+++ b/cherry/package.json
@@ -8,12 +8,14 @@
         "clear": "docusaurus clear"
     },
     "dependencies": {
-        "@docusaurus/core": "^2.0.0-alpha.69",
-        "@docusaurus/preset-classic": "^2.0.0-alpha.69",
+        "@docusaurus/core": "^2.0.0-alpha.70",
+        "@docusaurus/preset-classic": "^2.0.0-alpha.70",
+        "@material-ui/core": "^4.11.2",
         "@mdx-js/react": "^1.6.22",
         "clsx": "^1.1.1",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "react-helmet": "^6.1.0"
     },
     "browserslist": {
         "production": [
