--- a/root/package.json
+++ b/root/package.json
@@ -4,7 +4,8 @@
     "dependencies": {
         "@material-ui/core": "^4.11.2",
         "@svgr/webpack": "^5.5.0",
-        "gatsby": "^2.29.2",
+        "gatsby": "^2.29.3",
+        "gatsby-plugin-canonical-urls": "^2.7.0",
         "gatsby-plugin-react-helmet": "^3.7.0",
         "gatsby-plugin-svgr": "^2.0.2",
         "gatsby-plugin-webpack-size": "^1.0.0",
