--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "start:cherry": "yarn workspace cherry start",
         "start": "run-p start:root start:cherry",
         "assemble": "node assemble",
-        "prettier": "prettier --write **/*.{js,jsx,ts,tsx,css,yml,md,html,json,scss}",
+        "prettier": "prettier --write **/*.{js,jsx,ts,tsx,css,yml,md,html,json}",
         "clean": "rimraf build"
     },
     "dependencies": {
@@ -19,7 +19,7 @@
     },
     "devDependencies": {
         "@types/fs-extra": "^9.0.6",
-        "@types/node": "14.x",
+        "@types/node": "^14.14.19",
         "prettier": "^2.2.1"
     },
     "prettier": {
