--- a/root/package.json
+++ b/root/package.json
@@ -1,6 +1,7 @@
 {
     "name": "root",
     "private": true,
+    "version": "1.0.0",
     "dependencies": {
         "@material-ui/core": "^4.11.2",
         "@svgr/webpack": "^5.5.0",
@@ -8,14 +9,21 @@
         "gatsby-plugin-canonical-urls": "^2.7.0",
         "gatsby-plugin-react-helmet": "^3.7.0",
         "gatsby-plugin-svgr": "^2.0.2",
-        "gatsby-plugin-webpack-size": "^1.0.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
-        "regenerator-runtime": "^0.13.7"
+        "regenerator-runtime": "^0.13.7",
+        "size-plugin": "^2.0.1",
+        "webpackbar": "^5.0.0-3"
     },
     "scripts": {
         "build": "gatsby build",
         "start": "gatsby develop"
+    },
+    "devDependencies": {
+        "@types/node": "^14.14.19",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@types/react-helmet": "^6.1.0"
     }
 }
