--- a/root/package.json
+++ b/root/package.json
@@ -7,6 +7,7 @@
         "@svgr/webpack": "^5.5.0",
         "gatsby": "^2.29.3",
         "gatsby-plugin-canonical-urls": "^2.7.0",
+        "gatsby-plugin-material-ui": "^2.1.10",
         "gatsby-plugin-react-helmet": "^3.7.0",
         "gatsby-plugin-svgr": "^2.0.2",
         "react": "^17.0.1",
