--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,13 +1,16 @@
+container:
+    image: node:14
+
 Build_task:
     env:
         NODE_ENV: production
-    yarn_cache:
+    Yarn_cache:
         folder: .yarn/cache
-    cherry_yarn_cache:
-        folder: cherry/.yarn/cache
-    prepopulate_script: yarn
-    build_script: yarn build
-    site_preview_artifacts:
+        reupload_on_changes: true
+    Root_Gatsby_cache:
+        folder: root/.cache
+        reupload_on_changes: true
+    Dependencies_script: yarn
+    Build_script: yarn build
+    Site_Preview_artifacts:
         path: build/**/**
-    container:
-        image: node:14
