--- a/cherry/package.json
+++ b/cherry/package.json
@@ -8,8 +8,8 @@
         "clear": "docusaurus clear"
     },
     "dependencies": {
-        "@docusaurus/core": "^2.0.0-alpha.70",
-        "@docusaurus/preset-classic": "^2.0.0-alpha.70",
+        "@docusaurus/core": "2.0.0-alpha.70",
+        "@docusaurus/preset-classic": "2.0.0-alpha.70",
         "@mdx-js/react": "^1.6.22",
         "clsx": "^1.1.1",
         "react": "^17.0.1",
