Next.js will serve fine in Gatsby's place.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-_site/
 .DS_Store
 .sass-cache
 
@@ -36,5 +35,5 @@ cherry/.pnp.*
 node_modules
 
 cherry/.cache
-root/.cache
-root/public
+root/.next
+root/out
