--- a/root/package.json
+++ b/root/package.json
@@ -4,22 +4,15 @@
     "version": "1.0.0",
     "dependencies": {
         "@material-ui/core": "^4.11.2",
+        "@material-ui/icons": "^4.11.2",
         "@material-ui/styles": "^4.11.2",
-        "@svgr/webpack": "^5.5.0",
-        "gatsby": "^2.30.2",
-        "gatsby-plugin-canonical-urls": "^2.8.0",
-        "gatsby-plugin-material-ui": "^2.1.10",
-        "gatsby-plugin-react-helmet": "^3.8.0",
-        "gatsby-plugin-svgr": "^2.1.0",
+        "next": "^10.0.5",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-helmet": "^6.1.0",
-        "regenerator-runtime": "^0.13.7",
-        "webpackbar": "^5.0.0-3"
+        "react-dom": "^17.0.1"
     },
     "scripts": {
-        "build": "gatsby build",
-        "start": "gatsby develop"
+        "build": "next build && next export",
+        "start": "next dev"
     },
     "devDependencies": {
         "@types/node": "^14.14.19",
