--- a/cherry/package.json
+++ b/cherry/package.json
@@ -3,17 +3,9 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "docusaurus start",
         "build": "docusaurus build",
-        "clear": "docusaurus clear"
-    },
-    "dependencies": {
-        "@docusaurus/core": "2.0.0-alpha.70",
-        "@docusaurus/preset-classic": "2.0.0-alpha.70",
-        "@mdx-js/react": "^1.6.22",
-        "clsx": "^1.1.1",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "clear": "docusaurus clear",
+        "start": "docusaurus start"
     },
     "browserslist": {
         "production": [
@@ -26,5 +18,13 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "dependencies": {
+        "@docusaurus/core": "2.0.0-alpha.70",
+        "@docusaurus/preset-classic": "2.0.0-alpha.70",
+        "@mdx-js/react": "^1.6.22",
+        "clsx": "^1.1.1",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1"
     }
 }
