--- a/package.json
+++ b/package.json
@@ -27,19 +27,16 @@
         "tabWidth": 4
     },
     "dependencies": {
-        "fs-extra": "^9.0.1",
-        "npm-run-all": "^4.1.5",
-        "rimraf": "^3.0.2"
-    },
-    "devDependencies": {
         "@types/fs-extra": "^9.0.6",
         "@types/node": "^14.14.19",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "fs-extra": "^9.0.1",
+        "npm-run-all": "^4.1.5",
         "prettier": "^2.2.1",
         "prettier-plugin-organize-imports": "^1.1.1",
         "prettier-plugin-packagejson": "^2.2.9",
-        "typescript": "^4.1.3",
-        "typescript-plugin-css-modules": "^3.0.1"
+        "rimraf": "^3.0.2",
+        "typescript": "^4.1.3"
     }
 }
