--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
         "prettier": "^2.2.1",
         "prettier-plugin-organize-imports": "^1.1.1",
         "prettier-plugin-packagejson": "^2.2.9",
-        "rimraf": "^3.0.2",
-        "typescript": "^4.1.3"
+        "rimraf": "^3.0.2"
     }
 }
