--- a/root/package.json
+++ b/root/package.json
@@ -10,8 +10,10 @@
         "@material-ui/core": "^4.11.2",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/styles": "^4.11.2",
+        "@types/node": "*",
         "next": "^10.0.5",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "typescript": "^4.1.3"
     }
 }
