--- a/root/package.json
+++ b/root/package.json
@@ -3,9 +3,9 @@
     "private": true,
     "version": "1.0.0",
     "dependencies": {
-        "@material-ui/core": "^4.11.2",
+        "@material-ui/core": "4.11.3",
         "@material-ui/icons": "^4.11.2",
-        "@material-ui/styles": "^4.11.2",
+        "@material-ui/styles": "4.11.3",
         "gatsby": "^2.31.1",
         "gatsby-plugin-canonical-urls": "^2.9.0",
         "gatsby-plugin-material-ui": "^2.1.10",
