--- a/root/package.json
+++ b/root/package.json
@@ -10,6 +10,7 @@
         "gatsby-plugin-canonical-urls": "^2.9.0",
         "gatsby-plugin-material-ui": "^2.1.10",
         "gatsby-plugin-react-helmet": "^3.9.0",
+        "gatsby-source-dev": "^0.1.4",
         "gatsby-source-filesystem": "^2.10.0",
         "gatsby-transformer-remark": "^2.15.0",
         "react": "^17.0.1",
