--- a/docs/package.json
+++ b/docs/package.json
@@ -1,17 +1,16 @@
 {
-    "name": "cherry",
+    "name": "docs",
     "version": "0.0.0",
     "private": true,
     "scripts": {
         "docusaurus": "docusaurus",
-        "start": "docusaurus start",
+        "start": "docusaurus start --port 3500",
         "build": "docusaurus build",
         "clear": "docusaurus clear"
     },
     "dependencies": {
         "@docusaurus/core": "2.0.0-alpha.70",
         "@docusaurus/plugin-content-docs": "2.0.0-alpha.70",
-        "@docusaurus/plugin-content-pages": "2.0.0-alpha.70",
         "@docusaurus/theme-classic": "2.0.0-alpha.70",
         "@mdx-js/react": "^1.6.22",
         "clsx": "^1.1.1",
