--- a/docs/package.json
+++ b/docs/package.json
@@ -16,7 +16,8 @@
         "@mdx-js/react": "^1.6.22",
         "clsx": "^1.1.1",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "react-tooltip": "^4.2.14"
     },
     "browserslist": {
         "production": [
