--- a/cherry/package.json
+++ b/cherry/package.json
@@ -9,10 +9,10 @@
         "clear": "docusaurus clear"
     },
     "dependencies": {
-        "@docusaurus/core": "2.0.0-alpha.70",
-        "@docusaurus/plugin-content-docs": "2.0.0-alpha.70",
-        "@docusaurus/plugin-content-pages": "2.0.0-alpha.70",
-        "@docusaurus/theme-classic": "2.0.0-alpha.70",
+        "@docusaurus/core": "2.0.0-alpha.9f5f3931c",
+        "@docusaurus/plugin-content-docs": "2.0.0-alpha.9f5f3931c",
+        "@docusaurus/plugin-content-pages": "2.0.0-alpha.9f5f3931c",
+        "@docusaurus/theme-classic": "2.0.0-alpha.9f5f3931c",
         "@mdx-js/react": "^1.6.22",
         "clsx": "^1.1.1",
         "react": "^17.0.1",
