--- a/docs/package.json
+++ b/docs/package.json
@@ -6,13 +6,14 @@
         "docusaurus": "docusaurus",
         "start": "docusaurus start --port 3500",
         "build": "docusaurus build",
-        "clear": "docusaurus clear"
+        "clear": "docusaurus clear",
+        "write-translations": "docusaurus write-translations"
     },
     "dependencies": {
-        "@docusaurus/core": "2.0.0-alpha.70",
-        "@docusaurus/plugin-content-docs": "2.0.0-alpha.70",
-        "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-alpha.70",
-        "@docusaurus/theme-classic": "2.0.0-alpha.70",
+        "@docusaurus/core": "2.0.0-alpha.9f5f3931c",
+        "@docusaurus/plugin-content-docs": "2.0.0-alpha.9f5f3931c",
+        "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-alpha.9f5f3931c",
+        "@docusaurus/theme-classic": "2.0.0-alpha.9f5f3931c",
         "@mdx-js/react": "^1.6.22",
         "clsx": "^1.1.1",
         "react": "^17.0.1",
