--- a/package.json
+++ b/package.json
@@ -2,24 +2,26 @@
     "name": "rdil.rocks",
     "private": true,
     "scripts": {
-        "build": "run-s clean build:root build:cherry assemble",
+        "build": "run-s clean build:root build:cherry build:docs assemble",
         "build:root": "yarn workspace root build",
         "build:cherry": "yarn workspace cherry build",
+        "build:docs": "yarn workspace docs build",
         "start:root": "yarn workspace root start",
         "start:cherry": "yarn workspace cherry start",
-        "start": "run-p start:root start:cherry",
+        "start:docs": "yarn workspace docs start",
+        "start": "echo PLEASE USE start:root, start:cherry, or start:docs",
         "assemble": "node assemble",
         "prettier": "prettier --write **/*.{js,jsx,ts,tsx,css,yml,md,html,json}",
         "clean": "rimraf build"
     },
     "dependencies": {
-        "fs-extra": "^9.0.1",
+        "fs-extra": "^9.1.0",
         "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.2"
     },
     "devDependencies": {
         "@types/fs-extra": "^9.0.6",
-        "@types/node": "^14.14.19",
+        "@types/node": "^14.14.22",
         "prettier": "^2.2.1"
     },
     "prettier": {
@@ -28,6 +30,7 @@
     },
     "workspaces": [
         "cherry",
-        "root"
+        "root",
+        "docs"
     ]
 }
