--- a/root/package.json
+++ b/root/package.json
@@ -6,13 +6,15 @@
         "@material-ui/core": "4.11.3",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/styles": "4.11.3",
+        "axios": "^0.21.1",
+        "delay": "^5.0.0",
         "gatsby": "^2.32.3",
         "gatsby-plugin-canonical-urls": "^2.10.0",
         "gatsby-plugin-material-ui": "^2.1.10",
         "gatsby-plugin-react-helmet": "^3.10.0",
-        "gatsby-source-dev": "^0.1.4",
         "gatsby-source-filesystem": "^2.11.0",
         "gatsby-transformer-remark": "^2.16.0",
+        "query-string": "^6.14.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
@@ -24,9 +26,9 @@
         "start": "gatsby develop"
     },
     "devDependencies": {
-        "@types/node": "^14.14.22",
-        "@types/react": "^17.0.1",
-        "@types/react-dom": "^17.0.0",
+        "@types/node": "^14.14.28",
+        "@types/react": "^17.0.2",
+        "@types/react-dom": "^17.0.1",
         "@types/react-helmet": "^6.1.0"
     }
 }
