--- a/docs/package.json
+++ b/docs/package.json
@@ -7,7 +7,8 @@
         "start": "docusaurus start --port 3500",
         "build": "docusaurus build",
         "clear": "docusaurus clear",
-        "write-translations": "docusaurus write-translations"
+        "write-translations": "docusaurus write-translations",
+        "swizzle": "docusaurus swizzle"
     },
     "dependencies": {
         "@docusaurus/core": "2.0.0-alpha.9f5f3931c",
