--- a/root/package.json
+++ b/root/package.json
@@ -7,28 +7,23 @@
         "@material-ui/icons": "^4.11.2",
         "@material-ui/styles": "4.11.3",
         "axios": "^0.21.1",
+        "clsx": "^1.1.1",
         "delay": "^5.0.0",
-        "gatsby": "^2.32.3",
-        "gatsby-plugin-canonical-urls": "^2.10.0",
-        "gatsby-plugin-material-ui": "^2.1.10",
-        "gatsby-plugin-react-helmet": "^3.10.0",
-        "gatsby-source-filesystem": "^2.11.0",
-        "gatsby-transformer-remark": "^2.16.0",
+        "gray-matter": "^4.0.2",
+        "next": "^10.0.7",
         "query-string": "^6.14.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-helmet": "^6.1.0",
-        "regenerator-runtime": "^0.13.7",
-        "webpackbar": "^5.0.0-3"
+        "remark": "^13.0.0",
+        "remark-html": "^13.0.1"
     },
     "scripts": {
-        "build": "gatsby build",
-        "start": "gatsby develop"
+        "build": "next build && next export",
+        "start": "next dev"
     },
     "devDependencies": {
         "@types/node": "^14.14.28",
         "@types/react": "^17.0.2",
-        "@types/react-dom": "^17.0.1",
-        "@types/react-helmet": "^6.1.0"
+        "@types/react-dom": "^17.0.1"
     }
 }
