--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dependencies": {
         "fs-extra": "^9.1.0",
         "npm-run-all": "^4.1.5",
-        "rimraf": "^3.0.2"
+        "rimraf": "^3.0.2",
+        "typescript": "4.1.5"
     },
     "devDependencies": {
         "@types/fs-extra": "^9.0.6",
