--- a/root/package.json
+++ b/root/package.json
@@ -6,6 +6,7 @@
         "@material-ui/core": "4.11.3",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/styles": "4.11.3",
+        "ace-builds": "^1.4.12",
         "axios": "^0.21.1",
         "clsx": "^1.1.1",
         "delay": "^5.0.0",
@@ -13,9 +14,11 @@
         "next": "^10.0.7",
         "query-string": "^6.14.0",
         "react": "^17.0.1",
+        "react-ace": "^9.3.0",
         "react-dom": "^17.0.1",
         "remark": "^13.0.0",
-        "remark-html": "^13.0.1"
+        "remark-html": "^13.0.1",
+        "typescript": "4.1.5"
     },
     "scripts": {
         "build": "next build && next export",
