--- a/docs/package.json
+++ b/docs/package.json
@@ -4,8 +4,8 @@
     "private": true,
     "scripts": {
         "docusaurus": "docusaurus",
-        "start": "docusaurus start --port 3500",
-        "build": "docusaurus build",
+        "start:docs": "docusaurus start --port 3500",
+        "build:docs": "docusaurus build",
         "clear": "docusaurus clear",
         "write-translations": "docusaurus write-translations",
         "swizzle": "docusaurus swizzle"
