--- a/package.json
+++ b/package.json
@@ -2,13 +2,7 @@
     "name": "rdil.rocks",
     "private": true,
     "scripts": {
-        "build": "run-s clean build:root build:cherry build:docs assemble",
-        "build:root": "yarn workspace root build",
-        "build:cherry": "yarn workspace cherry build",
-        "build:docs": "yarn workspace docs build",
-        "start:root": "yarn workspace root start",
-        "start:cherry": "yarn workspace cherry start",
-        "start:docs": "yarn workspace docs start",
+        "build": "yarn clean && yarn build:root && yarn build:cherry && yarn build:docs && yarn assemble",
         "start": "echo PLEASE USE start:root, start:cherry, or start:docs",
         "assemble": "node assemble",
         "prettier": "prettier --write **/*.{js,jsx,ts,tsx,css,yml,md,html,json}",
@@ -16,7 +10,6 @@
     },
     "dependencies": {
         "fs-extra": "^9.1.0",
-        "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.2",
         "typescript": "4.1.5"
     },
