--- a/root/package.json
+++ b/root/package.json
@@ -21,8 +21,8 @@
         "typescript": "4.1.5"
     },
     "scripts": {
-        "build": "next build && next export",
-        "start": "next dev"
+        "start:root": "next dev",
+        "build:root": "next build && next export"
     },
     "devDependencies": {
         "@types/node": "^14.14.28",
