--- a/netlify.toml
+++ b/netlify.toml
@@ -10,12 +10,18 @@ Referrer-Policy = "same-origin"
 
 [[redirects]]
 from = "/update"
-to = "https://github.com/hyperiumjailbreak/client/releases/"
+to = "https://github.com/hyperiumjailbreak/client/releases"
 status = 301
 force = true
 
 [[redirects]]
 from = "https://www.rdil.rocks/"
-to = "https://rdil.rocks/"
+to = "https://rdil.rocks"
+status = 301
+force = true
+
+[[redirects]]
+from = "https://cirrusbuilder.rdil.rocks/*"
+to = "https://rdil.rocks/cirrus-builder"
 status = 301
 force = true
