--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "devDependencies": {
         "@types/fs-extra": "^9.0.6",
         "@types/node": "^14.14.22",
+        "netlify-plugin-cache": "^1.0.3",
         "prettier": "^2.2.1"
     },
     "prettier": {
