--- a/netlify.toml
+++ b/netlify.toml
@@ -38,6 +38,6 @@ package = "netlify-plugin-cache-nextjs"
 build_dir_path = "root"
 
 [[plugins]]
-package = "netlify-plugin-cache"
+package = "/.yarn/netlify-cache"
 [plugins.inputs]
 paths = ["cherry/node_modules/.cache", "docs/node_modules/.cache"]
