--- a/docs/package.json
+++ b/docs/package.json
@@ -11,18 +11,18 @@
         "swizzle": "docusaurus swizzle"
     },
     "dependencies": {
-        "@docusaurus/core": "2.0.0-alpha.74",
-        "@docusaurus/plugin-content-docs": "2.0.0-alpha.74",
-        "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-alpha.74",
-        "@docusaurus/theme-classic": "2.0.0-alpha.74",
+        "@docusaurus/core": "2.0.0-beta.0",
+        "@docusaurus/plugin-content-docs": "2.0.0-beta.0",
+        "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-beta.0",
+        "@docusaurus/theme-classic": "2.0.0-beta.0",
         "@mdx-js/react": "^1.6.22",
         "clsx": "^1.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-tooltip": "^4.2.18"
+        "react-tooltip": "^4.2.21"
     },
     "devDependencies": {
-        "@docusaurus/types": "2.0.0-alpha.fb07bd871"
+        "@docusaurus/types": "2.0.0-beta.0"
     },
     "browserslist": {
         "production": [
