--- a/root/package.json
+++ b/root/package.json
@@ -3,9 +3,9 @@
     "private": true,
     "version": "1.0.0",
     "dependencies": {
-        "@material-ui/core": "4.11.4",
+        "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
-        "@material-ui/styles": "4.11.4",
+        "@material-ui/styles": "^4.11.4",
         "ace-builds": "^1.4.12",
         "axios": "^0.21.1",
         "clsx": "^1.1.1",
@@ -14,19 +14,19 @@
         "next": "^10.2.0",
         "query-string": "^7.0.0",
         "react": "^17.0.2",
-        "react-ace": "^9.4.0",
+        "react-ace": "^9.4.1",
         "react-dom": "^17.0.2",
         "remark": "^13.0.0",
         "remark-html": "^13.0.1",
-        "typescript": "4.2.4"
+        "typescript": "4.3.2"
     },
     "scripts": {
         "start:root": "next dev",
         "build:root": "next build && next export"
     },
     "devDependencies": {
-        "@types/node": "^14.14.28",
-        "@types/react": "^17.0.2",
-        "@types/react-dom": "^17.0.1"
+        "@types/node": "^15.12.2",
+        "@types/react": "^17.0.9",
+        "@types/react-dom": "^17.0.6"
     }
 }
