--- a/root/package.json
+++ b/root/package.json
@@ -8,6 +8,7 @@
         "@material-ui/styles": "^4.11.4",
         "ace-builds": "^1.4.12",
         "axios": "^0.21.1",
+        "clean-css": "^5.1.2",
         "clsx": "^1.1.1",
         "delay": "^5.0.0",
         "gray-matter": "^4.0.3",
@@ -25,6 +26,7 @@
         "build:root": "next build && next export"
     },
     "devDependencies": {
+        "@types/clean-css": "^4.2.4",
         "@types/node": "^15.12.2",
         "@types/react": "^17.0.9",
         "@types/react-dom": "^17.0.6"
