--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
         "build": "yarn clean && yarn build:root && yarn build:docs && yarn assemble",
         "start": "echo PLEASE USE start:root or start:docs",
         "assemble": "node assemble",
-        "prettier": "prettier --write **/*.{js,jsx,ts,tsx,css,yml,md,html,json}",
+        "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css,yml,md,html,json}\"",
         "clean": "rimraf build"
     },
     "dependencies": {
-        "fs-extra": "^9.1.0",
+        "fs-extra": "^10.0.0",
         "rimraf": "^3.0.2",
-        "typescript": "4.3.2"
+        "typescript": "^4.4.4"
     },
     "devDependencies": {
         "@types/fs-extra": "^9.0.6",
@@ -25,5 +25,6 @@
     "workspaces": [
         "root",
         "docs"
-    ]
+    ],
+    "packageManager": "yarn@3.1.0"
 }
