--- a/root/package.json
+++ b/root/package.json
@@ -3,9 +3,12 @@
     "private": true,
     "version": "1.0.0",
     "dependencies": {
-        "@material-ui/core": "^4.11.4",
-        "@material-ui/icons": "^4.11.2",
-        "@material-ui/styles": "^4.11.4",
+        "@emotion/cache": "^11.5.0",
+        "@emotion/react": "^11.5.0",
+        "@emotion/server": "^11.4.0",
+        "@emotion/styled": "^11.3.0",
+        "@mui/icons-material": "^5.0.5",
+        "@mui/material": "^5.0.6",
         "ace-builds": "^1.4.12",
         "axios": "^0.21.1",
         "clean-css": "^5.1.2",
@@ -19,7 +22,7 @@
         "react-dom": "^17.0.2",
         "remark": "^13.0.0",
         "remark-html": "^13.0.1",
-        "typescript": "4.4.2"
+        "typescript": "4.4.4"
     },
     "scripts": {
         "start:root": "next dev",
@@ -27,7 +30,7 @@
     },
     "devDependencies": {
         "@types/clean-css": "^4.2.4",
-        "@types/node": "^15.12.2",
+        "@types/node": "^16.11.6",
         "@types/react": "^17.0.9",
         "@types/react-dom": "^17.0.6"
     }
