--- a/root/package.json
+++ b/root/package.json
@@ -3,26 +3,26 @@
     "private": true,
     "version": "1.0.0",
     "dependencies": {
-        "@emotion/cache": "^11.5.0",
-        "@emotion/react": "^11.5.0",
+        "@emotion/cache": "^11.7.1",
+        "@emotion/react": "^11.9.0",
         "@emotion/server": "^11.4.0",
-        "@emotion/styled": "^11.3.0",
-        "@mui/icons-material": "^5.0.5",
-        "@mui/material": "^5.0.6",
-        "ace-builds": "^1.4.12",
-        "axios": "^0.21.1",
-        "clean-css": "^5.1.2",
+        "@emotion/styled": "^11.8.1",
+        "@mui/icons-material": "^5.6.2",
+        "@mui/material": "^5.7.0",
+        "ace-builds": "^1.5.0",
+        "axios": "^0.27.2",
+        "clean-css": "^5.3.0",
         "clsx": "^1.1.1",
         "delay": "^5.0.0",
         "gray-matter": "^4.0.3",
-        "next": "^11.1.1",
-        "query-string": "^7.0.0",
-        "react": "^17.0.2",
-        "react-ace": "^9.4.1",
-        "react-dom": "^17.0.2",
+        "next": "^12.1.6",
+        "query-string": "^7.1.1",
+        "react": "^18.1.0",
+        "react-ace": "^10.1.0",
+        "react-dom": "^18.1.0",
         "remark": "^13.0.0",
         "remark-html": "^13.0.1",
-        "typescript": "4.4.4"
+        "typescript": "^4.6.4"
     },
     "scripts": {
         "start:root": "next dev",
@@ -30,8 +30,8 @@
     },
     "devDependencies": {
         "@types/clean-css": "^4.2.4",
-        "@types/node": "^16.11.6",
-        "@types/react": "^17.0.9",
-        "@types/react-dom": "^17.0.6"
+        "@types/node": "^17.0.33",
+        "@types/react": "^18.0.9",
+        "@types/react-dom": "^18.0.4"
     }
 }
