--- a/docs/package.json
+++ b/docs/package.json
@@ -11,18 +11,18 @@
         "swizzle": "docusaurus swizzle"
     },
     "dependencies": {
-        "@docusaurus/core": "2.0.0-beta.20",
-        "@docusaurus/plugin-content-docs": "2.0.0-beta.20",
-        "@docusaurus/remark-plugin-npm2yarn": "2.0.0-beta.20",
-        "@docusaurus/theme-classic": "2.0.0-beta.20",
+        "@docusaurus/core": "2.1.0",
+        "@docusaurus/plugin-content-docs": "2.1.0",
+        "@docusaurus/remark-plugin-npm2yarn": "2.1.0",
+        "@docusaurus/theme-classic": "2.1.0",
         "@mdx-js/react": "^1.6.22",
-        "clsx": "^1.1.1",
-        "react": "^18.1.0",
-        "react-dom": "^18.1.0",
+        "clsx": "^1.2.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-tooltip": "^4.2.21"
     },
     "devDependencies": {
-        "@docusaurus/types": "2.0.0-beta.20"
+        "@docusaurus/types": "2.1.0"
     },
     "browserslist": {
         "production": [
