dependency upgrades + fix seo problems

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,7 @@
+enableGlobalCache: false
+
 nodeLinker: pnp
 
 pnpMode: loose
 
-yarnPath: .yarn/releases/yarn-4.0.0-rc.38.cjs
+yarnPath: .yarn/releases/yarn-4.0.0-rc.45.cjs
