--- a/package.json
+++ b/package.json
@@ -3,34 +3,36 @@
     "private": true,
     "version": "1.0.0",
     "dependencies": {
-        "@emotion/cache": "^11.7.1",
-        "@emotion/react": "^11.9.0",
-        "@emotion/server": "^11.4.0",
-        "@emotion/styled": "^11.8.1",
-        "@mui/icons-material": "^5.8.4",
-        "@mui/material": "^5.11.7",
-        "@next/font": "^13.1.6",
-        "axios": "^1.3.2",
+        "@emotion/cache": "^11.11.0",
+        "@emotion/react": "^11.11.1",
+        "@emotion/server": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.11.16",
+        "@mui/material": "^5.13.5",
+        "@next/env": "^13.4.6",
+        "axios": "^1.4.0",
         "clean-css": "^5.3.2",
-        "clsx": "^1.1.1",
-        "delay": "^5.0.0",
+        "clsx": "^1.2.1",
+        "delay": "^6.0.0",
         "gray-matter": "^4.0.3",
-        "next": "^13.1.6",
-        "query-string": "^7.1.1",
+        "next": "^13.4.6",
+        "next-sitemap": "^4.1.3",
+        "query-string": "^8.1.0",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
-        "remark": "^13.0.0",
-        "remark-html": "^13.0.1",
-        "typescript": "^4.9.5"
+        "remark": "^14.0.3",
+        "remark-html": "^15.0.2",
+        "typescript": "^5.1.3"
     },
     "scripts": {
         "start": "next dev",
-        "build": "next build && next export"
+        "build": "next build && next-sitemap --config next-sitemap.config.cjs"
     },
     "devDependencies": {
         "@types/clean-css": "^4.2.6",
-        "@types/node": "^18.11.19",
-        "@types/react": "^18.0.27",
-        "@types/react-dom": "^18.0.10"
-    }
+        "@types/node": "^20.3.1",
+        "@types/react": "^18.2.13",
+        "@types/react-dom": "^18.2.6"
+    },
+    "packageManager": "yarn@4.0.0-rc.45"
 }
